--- a/Tennis Shot Recognition.ipynb
+++ b/Tennis Shot Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNsaL0ECcjT3aHcTatvdxz",
+      "authorship_tag": "ABX9TyPJBSOhPa1b7J1SiUUqztg0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,35 +56,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a47TA4FwnHIq",
-        "outputId": "3301a063-bce3-4c23-f875-d68e8ccd3b1a"
+        "outputId": "7be2decc-cfa1-4241-9ed5-1a19137554ea"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting mediapipe\n",
-            "  Downloading mediapipe-0.10.21-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (9.7 kB)\n",
+            "Requirement already satisfied: mediapipe in /usr/local/lib/python3.12/dist-packages (0.10.21)\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from mediapipe) (1.4.0)\n",
             "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.3.0)\n",
             "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.2.10)\n",
             "Requirement already satisfied: jax in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.3)\n",
             "Requirement already satisfied: jaxlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.3)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (3.10.0)\n",
-            "Collecting numpy<2 (from mediapipe)\n",
-            "  Downloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.12.0.88)\n",
-            "Collecting protobuf<5,>=4.25.3 (from mediapipe)\n",
-            "  Downloading protobuf-4.25.8-cp37-abi3-manylinux2014_x86_64.whl.metadata (541 bytes)\n",
-            "Collecting sounddevice>=0.4.4 (from mediapipe)\n",
-            "  Downloading sounddevice-0.5.2-py3-none-any.whl.metadata (1.6 kB)\n",
+            "Requirement already satisfied: numpy<2 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (1.26.4)\n",
+            "Requirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.11.0.86)\n",
+            "Requirement already satisfied: protobuf<5,>=4.25.3 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.25.8)\n",
+            "Requirement already satisfied: sounddevice>=0.4.4 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.2)\n",
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.2.1)\n",
             "Requirement already satisfied: CFFI>=1.0 in /usr/local/lib/python3.12/dist-packages (from sounddevice>=0.4.4->mediapipe) (2.0.0)\n",
             "Requirement already satisfied: ml_dtypes>=0.4.0 in /usr/local/lib/python3.12/dist-packages (from jax->mediapipe) (0.5.3)\n",
@@ -98,40 +93,8 @@
             "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (11.3.0)\n",
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (3.2.4)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (2.9.0.post0)\n",
-            "INFO: pip is looking at multiple versions of opencv-contrib-python to determine which version is compatible with other requirements. This could take a while.\n",
-            "Collecting opencv-contrib-python (from mediapipe)\n",
-            "  Downloading opencv_contrib_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (20 kB)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.12/dist-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.23)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.17.0)\n",
-            "Downloading mediapipe-0.10.21-cp312-cp312-manylinux_2_28_x86_64.whl (35.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.6/35.6 MB\u001b[0m \u001b[31m50.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.0/18.0 MB\u001b[0m \u001b[31m93.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading protobuf-4.25.8-cp37-abi3-manylinux2014_x86_64.whl (294 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m294.9/294.9 kB\u001b[0m \u001b[31m17.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading sounddevice-0.5.2-py3-none-any.whl (32 kB)\n",
-            "Downloading opencv_contrib_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (69.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.1/69.1 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: protobuf, numpy, sounddevice, opencv-contrib-python, mediapipe\n",
-            "  Attempting uninstall: protobuf\n",
-            "    Found existing installation: protobuf 5.29.5\n",
-            "    Uninstalling protobuf-5.29.5:\n",
-            "      Successfully uninstalled protobuf-5.29.5\n",
-            "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 2.0.2\n",
-            "    Uninstalling numpy-2.0.2:\n",
-            "      Successfully uninstalled numpy-2.0.2\n",
-            "  Attempting uninstall: opencv-contrib-python\n",
-            "    Found existing installation: opencv-contrib-python 4.12.0.88\n",
-            "    Uninstalling opencv-contrib-python-4.12.0.88:\n",
-            "      Successfully uninstalled opencv-contrib-python-4.12.0.88\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, but you have protobuf 4.25.8 which is incompatible.\n",
-            "thinc 8.3.6 requires numpy<3.0.0,>=2.0.0, but you have numpy 1.26.4 which is incompatible.\n",
-            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
-            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
-            "grpcio-status 1.71.2 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 4.25.8 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed mediapipe-0.10.21 numpy-1.26.4 opencv-contrib-python-4.11.0.86 protobuf-4.25.8 sounddevice-0.5.2\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (4.67.1)\n"
           ]
         }
@@ -156,7 +119,7 @@
       "metadata": {
         "id": "QxATW-n-tHkm"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -170,15 +133,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "97l6mFmBzajr",
-        "outputId": "10d618ce-bdc3-4eee-cbc3-57ba031ceb32"
+        "outputId": "74f3c87e-a0d5-4441-9d41-f05aadfc4f98"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -196,7 +159,7 @@
       "metadata": {
         "id": "Ro_q21Fd3uWt"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -218,7 +181,7 @@
       "metadata": {
         "id": "1OTVBUnk342L"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -240,7 +203,7 @@
       "metadata": {
         "id": "vKn2R24832tU"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -267,7 +230,7 @@
       "metadata": {
         "id": "ZrcmY4tPAKBq"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -290,7 +253,7 @@
       "metadata": {
         "id": "P4fYG4cGAx3n"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -314,7 +277,7 @@
       "metadata": {
         "id": "utwAxJlyBOtV"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -330,7 +293,7 @@
       "metadata": {
         "id": "Su6kI8FgBfDn"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -356,42 +319,100 @@
       "source": [
         "from mediapipe.python.solutions.pose import PoseLandmark\n",
         "\n",
+        "# ---- indici dei landmark corpo (senza viso) ----\n",
         "BODY_LANDMARKS = [\n",
-        "    PoseLandmark.LEFT_SHOULDER,\n",
-        "    PoseLandmark.RIGHT_SHOULDER,\n",
-        "    PoseLandmark.LEFT_ELBOW,\n",
-        "    PoseLandmark.RIGHT_ELBOW,\n",
-        "    PoseLandmark.LEFT_WRIST,\n",
-        "    PoseLandmark.RIGHT_WRIST,\n",
-        "    PoseLandmark.LEFT_HIP,\n",
-        "    PoseLandmark.RIGHT_HIP,\n",
-        "    PoseLandmark.LEFT_KNEE,\n",
-        "    PoseLandmark.RIGHT_KNEE,\n",
-        "    PoseLandmark.LEFT_ANKLE,\n",
-        "    PoseLandmark.RIGHT_ANKLE,\n",
-        "    PoseLandmark.LEFT_HEEL,\n",
-        "    PoseLandmark.RIGHT_HEEL,\n",
-        "    PoseLandmark.LEFT_FOOT_INDEX,\n",
-        "    PoseLandmark.RIGHT_FOOT_INDEX,\n",
+        "    PoseLandmark.LEFT_SHOULDER, PoseLandmark.RIGHT_SHOULDER,\n",
+        "    PoseLandmark.LEFT_ELBOW,    PoseLandmark.RIGHT_ELBOW,\n",
+        "    PoseLandmark.LEFT_WRIST,    PoseLandmark.RIGHT_WRIST,\n",
+        "    PoseLandmark.LEFT_HIP,      PoseLandmark.RIGHT_HIP,\n",
+        "    PoseLandmark.LEFT_KNEE,     PoseLandmark.RIGHT_KNEE,\n",
+        "    PoseLandmark.LEFT_ANKLE,    PoseLandmark.RIGHT_ANKLE,\n",
+        "    PoseLandmark.LEFT_HEEL,     PoseLandmark.RIGHT_HEEL,\n",
+        "    PoseLandmark.LEFT_FOOT_INDEX, PoseLandmark.RIGHT_FOOT_INDEX,\n",
+        "]\n",
+        "BODY_IDX = [lm.value for lm in BODY_LANDMARKS]\n",
+        "\n",
+        "# ---- connessioni solo corpo (niente viso) ----\n",
+        "BODY_CONNECTIONS = [\n",
+        "    # Torso / spalle / anche\n",
+        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.RIGHT_SHOULDER,  (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.LEFT_HIP,        (0, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_HIP,       (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_HIP,       PoseLandmark.RIGHT_HIP,       (0, 255, 0)),\n",
+        "\n",
+        "    # Braccio sinistro\n",
+        "    (PoseLandmark.LEFT_SHOULDER, PoseLandmark.LEFT_ELBOW, (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_ELBOW,    PoseLandmark.LEFT_WRIST, (0, 255, 0)),\n",
+        "\n",
+        "    # Braccio destro\n",
+        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_ELBOW, (0, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_ELBOW,    PoseLandmark.RIGHT_WRIST, (0, 255, 0)),\n",
+        "\n",
+        "    # Gamba sinistra\n",
+        "    (PoseLandmark.LEFT_HIP,   PoseLandmark.LEFT_KNEE,       (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_KNEE,  PoseLandmark.LEFT_ANKLE,      (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_ANKLE, PoseLandmark.LEFT_HEEL,       (0, 255, 0)),\n",
+        "    (PoseLandmark.LEFT_HEEL,  PoseLandmark.LEFT_FOOT_INDEX, (0, 255, 0)),\n",
+        "\n",
+        "    # Gamba destra\n",
+        "    (PoseLandmark.RIGHT_HIP,   PoseLandmark.RIGHT_KNEE,       (0, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_KNEE,  PoseLandmark.RIGHT_ANKLE,      (0, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_ANKLE, PoseLandmark.RIGHT_HEEL,       (0, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_HEEL,  PoseLandmark.RIGHT_FOOT_INDEX, (0, 255, 0)),\n",
         "]"
       ],
       "metadata": {
         "id": "lsSa1hr4FkBk"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def filtered_landmarks(landmarks):\n",
-        "  out = {}\n",
-        "  for name,"
+        "def draw_body_only(frame, landmarks, img_w, img_h, visibility_thr=0.5):\n",
+        "    \"\"\"Disegna solo i landmark e le connessioni 'corpo' con OpenCV.\"\"\"\n",
+        "    # punti\n",
+        "    for idx in BODY_IDX:\n",
+        "        lm = landmarks[idx]\n",
+        "        if getattr(lm, \"visibility\", 1.0) < visibility_thr:\n",
+        "            continue\n",
+        "        x, y = int(lm.x * img_w), int(lm.y * img_h)\n",
+        "        if 0 <= x < img_w and 0 <= y < img_h:\n",
+        "            cv2.circle(frame, (x, y), 3, (0, 255, 0), -1)\n",
+        "\n",
+        "    # linee\n",
+        "    for a, b, c in BODY_CONNECTIONS:\n",
+        "        la, lb = landmarks[a.value], landmarks[b.value]\n",
+        "        if getattr(la, \"visibility\", 1.0) < visibility_thr:\n",
+        "            continue\n",
+        "        if getattr(lb, \"visibility\", 1.0) < visibility_thr:\n",
+        "            continue\n",
+        "        ax, ay = int(la.x * img_w), int(la.y * img_h)\n",
+        "        bx, by = int(lb.x * img_w), int(lb.y * img_h)\n",
+        "        if (0 <= ax < img_w and 0 <= ay < img_h and\n",
+        "            0 <= bx < img_w and 0 <= by < img_h):\n",
+        "            cv2.line(frame, (ax, ay), (bx, by), c, 2)"
       ],
       "metadata": {
-        "id": "vTX_xD_iGtPH"
+        "id": "__mSBZSPz4Qj"
       },
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dump_body_to_csv(landmarks, frame_idx, csv_writer):\n",
+        "    \"\"\"Scrive solo i landmark corpo nel CSV.\"\"\"\n",
+        "    for idx in BODY_IDX:\n",
+        "        lm = landmarks[idx]\n",
+        "        csv_writer.writerow([frame_idx, idx, lm.x, lm.y, lm.z, getattr(lm, \"visibility\", 1.0)])"
+      ],
+      "metadata": {
+        "id": "d8R-t_yLz6ka"
+      },
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -401,37 +422,33 @@
         "\n",
         "total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
         "frame_idx = 0\n",
+        "w = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "h = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
         "\n",
-        "# Usa il model_complexity=1 (bilancia velocità/accuratezza). Se hai GPU/tempo, metti 2.\n",
         "with mp_pose.Pose(static_image_mode=False, model_complexity=1) as pose:\n",
-        "  with tqdm(total=total_frames, desc=\"Video elaboration\", unit=\"frame\") as pbar:\n",
-        "    while True:\n",
-        "        ret, frame = cap.read()\n",
-        "        if not ret:\n",
-        "            break\n",
+        "    with tqdm(total=total_frames, desc=\"Video elaboration\", unit=\"frame\") as pbar:\n",
+        "        while True:\n",
+        "            ret, frame = cap.read()\n",
+        "            if not ret:\n",
+        "                break\n",
         "\n",
-        "        # BGR -> RGB per Mediapipe\n",
-        "        rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-        "        result = pose.process(rgb)\n",
+        "            rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+        "            result = pose.process(rgb)\n",
         "\n",
-        "        if result.pose_landmarks:\n",
-        "            # Disegna sul frame BGR (ok)\n",
-        "            mp_drawing.draw_landmarks(\n",
-        "                frame,\n",
-        "                result.pose_landmarks,\n",
-        "                mp_pose.POSE_CONNECTIONS,\n",
-        "                landmark_drawing_spec=mp_drawing.DrawingSpec(thickness=2, circle_radius=2),\n",
-        "                connection_drawing_spec=mp_drawing.DrawingSpec(thickness=2)\n",
-        "            )\n",
-        "            # Salva anche i landmark su CSV (opzionale)\n",
-        "            dump_landmarks_to_csv(result.pose_landmarks.landmark, frame_idx)\n",
+        "            if result.pose_landmarks:\n",
+        "                lms = result.pose_landmarks.landmark\n",
         "\n",
-        "        # Scrivi il frame annotato nel video\n",
-        "        writer.write(frame)\n",
-        "        frame_idx += 1\n",
-        "        pbar.update(1)\n",
+        "                # Disegna SOLO corpo\n",
+        "                draw_body_only(frame, lms, w, h, visibility_thr=0.5)\n",
         "\n",
-        "# Cleanup\n",
+        "                # Salva SOLO corpo nel CSV (se vuoi)\n",
+        "                if write_csv:\n",
+        "                    dump_body_to_csv(lms, frame_idx, csv_writer)\n",
+        "\n",
+        "            writer.write(frame)\n",
+        "            frame_idx += 1\n",
+        "            pbar.update(1)\n",
+        "\n",
         "cap.release()\n",
         "writer.release()\n",
         "if write_csv:\n",
@@ -446,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GoN1IfFQ7yv3",
-        "outputId": "939927ef-9f58-4465-ae4f-48881e5e70dd"
+        "outputId": "6e02fdea-ed1f-44dc-a326-77235123e04a"
       },
       "execution_count": null,
       "outputs": [
@@ -454,22 +471,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Video elaboration: 0frame [00:00, ?frame/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Video saved in: /content/drive/MyDrive/University/Deep/Sinner_2min_annoted.mp4\n",
-            "CSV saved in: /content/drive/MyDrive/University/Deep/Sinner_2min_landmarks.csv\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
+            "Video elaboration:  73%|███████▎  | 2644/3605 [03:37<01:33, 10.31frame/s]"
           ]
         }
       ]
