--- a/Tennis Shot Recognition.ipynb
+++ b/Tennis Shot Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJBSOhPa1b7J1SiUUqztg0",
+      "authorship_tag": "ABX9TyPgzPcmhLuX8TptN2cYgEQK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "1OTVBUnk342L"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "vKn2R24832tU"
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "ZrcmY4tPAKBq"
       },
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "P4fYG4cGAx3n"
       },
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
       "metadata": {
         "id": "utwAxJlyBOtV"
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -293,7 +293,7 @@
       "metadata": {
         "id": "Su6kI8FgBfDn"
       },
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -334,37 +334,37 @@
         "\n",
         "# ---- connessioni solo corpo (niente viso) ----\n",
         "BODY_CONNECTIONS = [\n",
-        "    # Torso / spalle / anche\n",
-        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.RIGHT_SHOULDER,  (0, 255, 0)),\n",
-        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.LEFT_HIP,        (0, 255, 0)),\n",
-        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_HIP,       (0, 255, 0)),\n",
-        "    (PoseLandmark.LEFT_HIP,       PoseLandmark.RIGHT_HIP,       (0, 255, 0)),\n",
+        "    # Torso / spalle / anche --> bianco\n",
+        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.RIGHT_SHOULDER,  (255, 255, 255)),\n",
+        "    (PoseLandmark.LEFT_SHOULDER,  PoseLandmark.LEFT_HIP,        (255, 255, 255)),\n",
+        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_HIP,       (255, 255, 255)),\n",
+        "    (PoseLandmark.LEFT_HIP,       PoseLandmark.RIGHT_HIP,       (255, 255, 255)),\n",
         "\n",
-        "    # Braccio sinistro\n",
-        "    (PoseLandmark.LEFT_SHOULDER, PoseLandmark.LEFT_ELBOW, (0, 255, 0)),\n",
-        "    (PoseLandmark.LEFT_ELBOW,    PoseLandmark.LEFT_WRIST, (0, 255, 0)),\n",
+        "    # Braccio sinistro --> blu\n",
+        "    (PoseLandmark.LEFT_SHOULDER, PoseLandmark.LEFT_ELBOW, (255, 0, 0)),\n",
+        "    (PoseLandmark.LEFT_ELBOW,    PoseLandmark.LEFT_WRIST, (255, 0, 0)),\n",
         "\n",
-        "    # Braccio destro\n",
-        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_ELBOW, (0, 255, 0)),\n",
-        "    (PoseLandmark.RIGHT_ELBOW,    PoseLandmark.RIGHT_WRIST, (0, 255, 0)),\n",
+        "    # Braccio destro --> rosso\n",
+        "    (PoseLandmark.RIGHT_SHOULDER, PoseLandmark.RIGHT_ELBOW, (0, 0, 255)),\n",
+        "    (PoseLandmark.RIGHT_ELBOW,    PoseLandmark.RIGHT_WRIST, (0, 0, 255)),\n",
         "\n",
-        "    # Gamba sinistra\n",
+        "    # Gamba sinistra --> verde\n",
         "    (PoseLandmark.LEFT_HIP,   PoseLandmark.LEFT_KNEE,       (0, 255, 0)),\n",
         "    (PoseLandmark.LEFT_KNEE,  PoseLandmark.LEFT_ANKLE,      (0, 255, 0)),\n",
         "    (PoseLandmark.LEFT_ANKLE, PoseLandmark.LEFT_HEEL,       (0, 255, 0)),\n",
         "    (PoseLandmark.LEFT_HEEL,  PoseLandmark.LEFT_FOOT_INDEX, (0, 255, 0)),\n",
         "\n",
-        "    # Gamba destra\n",
-        "    (PoseLandmark.RIGHT_HIP,   PoseLandmark.RIGHT_KNEE,       (0, 255, 0)),\n",
-        "    (PoseLandmark.RIGHT_KNEE,  PoseLandmark.RIGHT_ANKLE,      (0, 255, 0)),\n",
-        "    (PoseLandmark.RIGHT_ANKLE, PoseLandmark.RIGHT_HEEL,       (0, 255, 0)),\n",
-        "    (PoseLandmark.RIGHT_HEEL,  PoseLandmark.RIGHT_FOOT_INDEX, (0, 255, 0)),\n",
+        "    # Gamba destra --> giallo\n",
+        "    (PoseLandmark.RIGHT_HIP,   PoseLandmark.RIGHT_KNEE,       (255, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_KNEE,  PoseLandmark.RIGHT_ANKLE,      (255, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_ANKLE, PoseLandmark.RIGHT_HEEL,       (255, 255, 0)),\n",
+        "    (PoseLandmark.RIGHT_HEEL,  PoseLandmark.RIGHT_FOOT_INDEX, (255, 255, 0)),\n",
         "]"
       ],
       "metadata": {
         "id": "lsSa1hr4FkBk"
       },
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -397,7 +397,7 @@
       "metadata": {
         "id": "__mSBZSPz4Qj"
       },
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -454,24 +454,36 @@
         "if write_csv:\n",
         "    csv_file.close()\n",
         "\n",
-        "print(f\"Video saved in: {out_path}\")\n",
+        "print(f\"\\n Video saved in: {out_path}\")\n",
         "if write_csv:\n",
         "    print(f\"CSV saved in: {csv_path}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 228
         },
         "id": "GoN1IfFQ7yv3",
-        "outputId": "6e02fdea-ed1f-44dc-a326-77235123e04a"
+        "outputId": "dcefa364-1051-4d18-a42d-aef410b0e4f9"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Video elaboration:  73%|███████▎  | 2644/3605 [03:37<01:33, 10.31frame/s]"
+            "Video elaboration:   2%|▏         | 67/3605 [00:05<04:29, 13.13frame/s]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4291511996.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m                     \u001b[0mdump_body_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframe_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcsv_writer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m             \u001b[0mframe_idx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mpbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
