--- a/Tennis Shot Recognition.ipynb
+++ b/Tennis Shot Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPykougD5bc5UNp/HIk32fL",
+      "authorship_tag": "ABX9TyMPPlI/5NIq57/UguQo7lEx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Svanzi/Tennis-Shoot-Recognition/blob/main/Tennis%20Shot%20Recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Svanzi/Tennis-Shot-Recognition/blob/main/Tennis%20Shot%20Recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,35 +57,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a47TA4FwnHIq",
-        "outputId": "a00cca96-aecb-464e-878c-711f4a6d70cf"
+        "outputId": "729d6dde-7997-4521-c00f-6debc1304839"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting mediapipe\n",
-            "  Downloading mediapipe-0.10.21-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (9.7 kB)\n",
+            "Requirement already satisfied: mediapipe in /usr/local/lib/python3.12/dist-packages (0.10.21)\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from mediapipe) (1.4.0)\n",
             "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.3.0)\n",
             "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.2.10)\n",
             "Requirement already satisfied: jax in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.3)\n",
             "Requirement already satisfied: jaxlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.3)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (3.10.0)\n",
-            "Collecting numpy<2 (from mediapipe)\n",
-            "  Downloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.12.0.88)\n",
-            "Collecting protobuf<5,>=4.25.3 (from mediapipe)\n",
-            "  Downloading protobuf-4.25.8-cp37-abi3-manylinux2014_x86_64.whl.metadata (541 bytes)\n",
-            "Collecting sounddevice>=0.4.4 (from mediapipe)\n",
-            "  Downloading sounddevice-0.5.2-py3-none-any.whl.metadata (1.6 kB)\n",
+            "Requirement already satisfied: numpy<2 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (1.26.4)\n",
+            "Requirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.11.0.86)\n",
+            "Requirement already satisfied: protobuf<5,>=4.25.3 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.25.8)\n",
+            "Requirement already satisfied: sounddevice>=0.4.4 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.5.2)\n",
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.2.1)\n",
             "Requirement already satisfied: CFFI>=1.0 in /usr/local/lib/python3.12/dist-packages (from sounddevice>=0.4.4->mediapipe) (2.0.0)\n",
             "Requirement already satisfied: ml_dtypes>=0.4.0 in /usr/local/lib/python3.12/dist-packages (from jax->mediapipe) (0.5.3)\n",
@@ -99,40 +94,8 @@
             "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (11.3.0)\n",
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (3.2.4)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib->mediapipe) (2.9.0.post0)\n",
-            "INFO: pip is looking at multiple versions of opencv-contrib-python to determine which version is compatible with other requirements. This could take a while.\n",
-            "Collecting opencv-contrib-python (from mediapipe)\n",
-            "  Downloading opencv_contrib_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (20 kB)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.12/dist-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.23)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.17.0)\n",
-            "Downloading mediapipe-0.10.21-cp312-cp312-manylinux_2_28_x86_64.whl (35.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.6/35.6 MB\u001b[0m \u001b[31m52.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.0/18.0 MB\u001b[0m \u001b[31m98.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading protobuf-4.25.8-cp37-abi3-manylinux2014_x86_64.whl (294 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m294.9/294.9 kB\u001b[0m \u001b[31m23.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading sounddevice-0.5.2-py3-none-any.whl (32 kB)\n",
-            "Downloading opencv_contrib_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (69.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.1/69.1 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: protobuf, numpy, sounddevice, opencv-contrib-python, mediapipe\n",
-            "  Attempting uninstall: protobuf\n",
-            "    Found existing installation: protobuf 5.29.5\n",
-            "    Uninstalling protobuf-5.29.5:\n",
-            "      Successfully uninstalled protobuf-5.29.5\n",
-            "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 2.0.2\n",
-            "    Uninstalling numpy-2.0.2:\n",
-            "      Successfully uninstalled numpy-2.0.2\n",
-            "  Attempting uninstall: opencv-contrib-python\n",
-            "    Found existing installation: opencv-contrib-python 4.12.0.88\n",
-            "    Uninstalling opencv-contrib-python-4.12.0.88:\n",
-            "      Successfully uninstalled opencv-contrib-python-4.12.0.88\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, but you have protobuf 4.25.8 which is incompatible.\n",
-            "thinc 8.3.6 requires numpy<3.0.0,>=2.0.0, but you have numpy 1.26.4 which is incompatible.\n",
-            "grpcio-status 1.71.2 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 4.25.8 which is incompatible.\n",
-            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
-            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed mediapipe-0.10.21 numpy-1.26.4 opencv-contrib-python-4.11.0.86 protobuf-4.25.8 sounddevice-0.5.2\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (4.67.1)\n"
           ]
         }
@@ -157,7 +120,7 @@
       "metadata": {
         "id": "QxATW-n-tHkm"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -171,9 +134,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "97l6mFmBzajr",
-        "outputId": "74f3c87e-a0d5-4441-9d41-f05aadfc4f98"
+        "outputId": "0332e9df-dbdf-4fbe-a44d-09c35f2a146b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +160,7 @@
       "metadata": {
         "id": "Ro_q21Fd3uWt"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -219,7 +182,7 @@
       "metadata": {
         "id": "1OTVBUnk342L"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -241,7 +204,7 @@
       "metadata": {
         "id": "vKn2R24832tU"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -268,7 +231,7 @@
       "metadata": {
         "id": "ZrcmY4tPAKBq"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -291,7 +254,7 @@
       "metadata": {
         "id": "P4fYG4cGAx3n"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -310,29 +273,28 @@
         "if write_csv:\n",
         "    csv_file = open(csv_path, \"w\", newline=\"\")\n",
         "    csv_writer = csv.writer(csv_file)\n",
-        "    csv_writer.writerow([\"frame\", \"landmark\", \"x\", \"y\", \"z\", \"visibility\"])"
+        "    csv_writer.writerow([\"Frame\", \"Landmark\", \"Body Part\" \"x Pos\", \"y Pos\", \"z Pos\", \"Visibility\"])"
       ],
       "metadata": {
         "id": "utwAxJlyBOtV"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def dump_landmarks_to_csv(landmarks, frame_idx):\n",
-        "    if not write_csv:\n",
-        "        return\n",
-        "    # MediaPipe Pose ha 33 landmark\n",
-        "    for i, lm in enumerate(landmarks):\n",
-        "      landmark_name = mp_pose.PoseLandmark(i).name\n",
-        "      csv_writer.writerow([frame_idx, i, landmark_name, lm.x, lm.y, lm.z, lm.visibility])"
+        "def dump_body_to_csv(landmarks, frame_idx, csv_writer):\n",
+        "    \"\"\"Scrive solo i landmark corpo nel CSV.\"\"\"\n",
+        "    for idx in BODY_IDX:\n",
+        "        lm = landmarks[idx]\n",
+        "        lm_name  = mp_pose.PoseLandmark(idx).name\n",
+        "        csv_writer.writerow([frame_idx, idx, lm_name, lm.x, lm.y, lm.z, getattr(lm, \"visibility\", 1.0)])"
       ],
       "metadata": {
-        "id": "Su6kI8FgBfDn"
+        "id": "d8R-t_yLz6ka"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -403,7 +365,7 @@
       "metadata": {
         "id": "lsSa1hr4FkBk"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -436,22 +398,7 @@
       "metadata": {
         "id": "__mSBZSPz4Qj"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def dump_body_to_csv(landmarks, frame_idx, csv_writer):\n",
-        "    \"\"\"Scrive solo i landmark corpo nel CSV.\"\"\"\n",
-        "    for idx in BODY_IDX:\n",
-        "        lm = landmarks[idx]\n",
-        "        csv_writer.writerow([frame_idx, idx, lm.x, lm.y, lm.z, getattr(lm, \"visibility\", 1.0)])"
-      ],
-      "metadata": {
-        "id": "d8R-t_yLz6ka"
-      },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -493,36 +440,40 @@
         "if write_csv:\n",
         "    csv_file.close()\n",
         "\n",
-        "print(f\"\\n Video saved in: {out_path}\")\n",
+        "print(f\"\\nVideo saved in: {out_path}\")\n",
         "if write_csv:\n",
         "    print(f\"CSV saved in: {csv_path}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
+          "base_uri": "https://localhost:8080/"
         },
         "id": "GoN1IfFQ7yv3",
-        "outputId": "dcefa364-1051-4d18-a42d-aef410b0e4f9"
+        "outputId": "911379c9-87e0-458a-979f-17b4e6319cc7"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Video elaboration:   2%|▏         | 67/3605 [00:05<04:29, 13.13frame/s]\n"
+            "Video elaboration: 100%|██████████| 3605/3605 [02:51<00:00, 20.99frame/s]"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4291511996.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m                     \u001b[0mdump_body_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframe_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcsv_writer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m             \u001b[0mframe_idx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mpbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Video saved in: /content/drive/MyDrive/University/Deep/Sinner_2min_annoted.mp4\n",
+            "CSV saved in: /content/drive/MyDrive/University/Deep/Sinner_2min_landmarks.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ]
