--- a/Shot_Classification.ipynb
+++ b/Shot_Classification.ipynb
@@ -1,1 +1,42 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6993494d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Convolution2D, Dropout, Dense\n",
+    "from keras.layers import BatchNormalization\n",
+    "from keras.layers import MaxPooling2D\n",
+    "from keras.layers import Flatten\n",
+    "from keras.layers import LeakyReLU\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "import seaborn as sn\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import os"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
