--- a/Shot_Classification.ipynb
+++ b/Shot_Classification.ipynb
@@ -2,50 +2,30 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "6993494d",
       "metadata": {
         "id": "6993494d"
       },
       "outputs": [],
       "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow import keras\n",
-        "from tensorflow.keras import layers\n",
-        "\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Convolution2D, Dropout, Dense\n",
-        "from keras.layers import BatchNormalization\n",
-        "from keras.layers import MaxPooling2D\n",
-        "from keras.layers import Flatten\n",
-        "from keras.layers import LeakyReLU\n",
-        "from keras.callbacks import ModelCheckpoint\n",
-        "\n",
-        "from sklearn import preprocessing\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from google.colab import drive\n",
+        "import os, pathlib\n",
+        "from pathlib import Path\n",
         "import pandas as pd\n",
-        "import seaborn as sn\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "from tqdm import tqdm\n",
-        "import os"
+        "import numpy as np"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Solo la cartella DataSet dalla tua repo\n",
-        "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "REPO_URL   = \"https://github.com/Svanzi/Tennis-Shot-Recognition.git\"\n",
         "BASE       = \"/content/drive/MyDrive/University/Deep\"\n",
-        "SPARSE_DIR = \"Tennis-Shot-Recognition_ds\"   # repo \"leggera\" solo per i dati\n",
+        "SPARSE_DIR = \"Tennis-Shot-Recognition\"   # repo \"leggera\" solo per i dati\n",
         "TARGET     = f\"{BASE}/{SPARSE_DIR}\"\n",
         "\n",
-        "import os, pathlib\n",
         "os.makedirs(BASE, exist_ok=True)\n",
         "\n",
         "# Clona in modalità sparse solo la prima volta\n",
@@ -65,43 +45,59 @@
       ],
       "metadata": {
         "id": "zY0TQEjMINEs",
-        "outputId": "980063b6-1eff-45ca-95fb-8f494e37d6bb",
+        "outputId": "e956b804-3cdd-49f4-a726-8028205c16a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "zY0TQEjMINEs",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "/content/drive/MyDrive/University/Deep\n",
-            "Cloning into 'Tennis-Shot-Recognition_ds'...\n",
-            "remote: Enumerating objects: 37, done.\u001b[K\n",
-            "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (36/36), done.\u001b[K\n",
-            "remote: Total 37 (delta 4), reused 17 (delta 1), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (37/37), 11.35 KiB | 1.13 MiB/s, done.\n",
-            "Resolving deltas: 100% (4/4), done.\n",
-            "remote: Enumerating objects: 5, done.\u001b[K\n",
-            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Total 5 (delta 0), reused 2 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (5/5), 8.88 KiB | 909.00 KiB/s, done.\n",
+            "Mounted at /content/drive\n",
             "/content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition_ds\n",
-            "remote: Enumerating objects: 140, done.\u001b[K\n",
-            "remote: Counting objects: 100% (140/140), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (140/140), done.\u001b[K\n",
-            "remote: Total 140 (delta 0), reused 140 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (140/140), 489.31 KiB | 2.00 MiB/s, done.\n",
-            "Updating files: 100% (145/145), done.\n",
+            "remote: Enumerating objects: 3, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+            "remote: Total 2 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (2/2), 266 bytes | 19.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (1/1), completed with 1 local object.\n",
+            "From https://github.com/Svanzi/Tennis-Shot-Recognition\n",
+            "   07eb185..9dcb9e3  main       -> origin/main\n",
+            "Updating 07eb185..9dcb9e3\n",
+            "Fast-forward\n",
+            "remote: Enumerating objects: 1, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 1 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (1/1), 1.45 KiB | 36.00 KiB/s, done.\n",
+            " Shot_Classification.ipynb | 161 \u001b[32m++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m------------\u001b[m\n",
+            " 1 file changed, 120 insertions(+), 41 deletions(-)\n",
             "DATA_DIR = /content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition_ds/DataSet\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATA_DIR = Path(\"/content/drive/MyDrive/University/Deep/Tennis-Shot-Recognition/DataSet\")\n",
+        "\n",
+        "\n",
+        "files = sorted(DATA_DIR.glob(\"**/*.csv\"))\n",
+        "print(len(files), \"file\")\n",
+        "\n",
+        "# carica ogni csv in un np.array (righe = tempo, colonne = feature)\n",
+        "seqs = [pd.read_csv(f).to_numpy() for f in files]  # lista di array (lunghezze possono variare)\n"
+      ],
+      "metadata": {
+        "id": "bek0pWG9Mnlt"
+      },
+      "id": "bek0pWG9Mnlt",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
